<resources>
    <string name="app_name">归易</string>

    <!--版权说明-->
    <string name="arcface_facial_technology">人脸识别技术由虹软®提供</string>
    <!--登录界面-->
    <string name="login_button_name">登录</string>
    <string name="login_tip_text_content">人脸识别考勤系统</string>
    <string name="login_username_text">学工号</string>
    <string name="login_password_text">密码</string>

    <!--测试管理员用户信息-->
    <string name="test_username">100000001</string>
    <string name="test_password">abc</string>

    <!--学生主界面菜单-->
    <string name="home_activate_engine_text">激活引擎</string>

    <!--学生主界面功能-->
    <string name="face_recognize_text">人脸签到</string>
    <string name="check_history_text">查看签到记录</string>

    <!--管理员主界面功能-->
    <string name="login_out_text">退出登录</string>
    <string name="home_student_info_text">学生信息录入</string>
    <string name="home_face_manage_text">批量注册</string>
    <string name="get_student_info_text">查询学生信息</string>
    <string name="edit_student_status_text">修改学生状态</string>
    <string name="app_id">APP ID</string>
    <string name="sdk_key">SDK KEY</string>
    <string name="do_active_engine">激活引擎</string>

    <!--信息录入界面-->
    <string name="studentInfoInput_tip_text">学生信息录入</string>
    <string name="studentInfoInput_student_id_text">学号</string>
    <string name="studentInfoInput_name_text">姓名</string>
    <string name="studentInfoInput_class_num_text">班级</string>
    <string name="studentInfoInput_dormitory_num_text">公寓楼号</string>
    <string name="studentInfoInput_room_num_text">寝室号</string>
    <string name="studentInfoInput_repeat_password">重复密码</string>

    <!--查看学生基本信息签到信息界面-->
    <string name="stu_name">姓名</string>
    <string name="stu_no">学号</string>
    <string name="stu_classNum">班号</string>
    <string name="stu_dormitoryNum">公寓楼号</string>
    <string name="stu_room">寝室号</string>
    <string name="stu_singInResult">签到结果</string>

    <!--查看学生签到历史界面-->
    <string name="status">签到状态</string>
    <string name="stu_singInTime">签到时间</string>

    <!--基于寝室号查询考勤-->
    <string name="search_selectRoom">选择寝室</string>
    <string name="search_checkingInStatus">签到状态</string>
    <string name="search_alreadyCheckingIn">已签到</string>
    <string name="search_notCheckingIn">未签到</string>
    <string name="search_search">查询</string>

    <!--以下是人脸识别API相关的String-->
    <!--配置、功能选择界面-->
    <string name="page_preview">人脸属性检测（视频）</string>
    <string name="page_ir_preview">红外活体检测（视频）</string>
    <string name="page_face_recognize">人脸比对1:n（视频vs人脸库，RGB活体）</string>
    <string name="page_ir_face_recognize">人脸比对1:n（视频vs人脸库，IR活体）</string>
    <string name="page_single_image">人脸属性检测（图片）</string>
    <string name="page_multi_image">人脸比对1:n（图片vs图片）</string>
    <string name="page_face_manage">人脸批量注册管理</string>
    <string name="get_device_finger_failed">获取设备指纹失败，错误码：%d</string>
    <string name="choose_detect_degree">选择视频模式检测角度</string>
    <string name="copy_device_fingerprint">复制设备指纹信息</string>
    <string name="device_fingerprint_copied">设备指纹信息：\n%s\n已复制</string>
    <string name="active_engine">激活引擎</string>
    <string name="active_success">引擎初始化成功！</string>
    <string name="already_activated">引擎初始化成功！</string>
    <string name="active_failed">引擎初始化失败，错误码为 %d</string>
    <string name="library_not_found">未找到库文件，请检查是否有将.so文件放至工程的 app\\src\\main\\jniLibs 目录下</string>
    <string name="ft_op_0">视频模式仅检测0度</string>
    <string name="ft_op_90">视频模式仅检测90度</string>
    <string name="ft_op_180">视频模式仅检测180度</string>
    <string name="ft_op_270">视频模式仅检测270度</string>
    <string name="ft_op_all">视频模式全方向人脸检测</string>

    <!--人脸属性检测（图片） 界面-->
    <string name="start_process">开始处理</string>
    <string name="choose_local_image">选择本地图片</string>
    <string name="processing">处理中</string>

    <!--人脸比对1:n（图片vs图片） 界面-->
    <string name="choose_main_image">选择主图</string>
    <string name="add_item_image">添加比对图</string>
    <string name="notice_choose_main_img">请先选择主图</string>
    <string name="compare_failed">比对失败，错误码为 %d</string>

    <!--各个界面获取本地图片失败提示-->
    <string name="get_picture_failed">获取图片失败</string>

    <!--各个界面获取权限失败时的提示-->
    <string name="permission_denied">权限被拒绝！</string>

    <!--各个界面引擎初始化失败的提示-->
    <string name="init_failed">引擎初始化失败，错误码为 %d</string>
    <string name="engine_not_initialized">引擎未初始化，错误码为 %d</string>

    <!--单目、双目识别注册界面-->
    <string name="register">注册</string>
    <string name="register_success">注册成功！</string>
    <string name="register_failed_on_error">注册失败：未知原因！</string>
    <string name="register_failed_on_already_exists">注册失败：您的人脸信息已注册！</string>
    <string name="register_failed_on_not_current_user">注册失败：非当前用户！</string>
    <string name="switch_camera">切换相机</string>
    <string name="switch_camera_failed">切换相机失败</string>
    <string name="recognize_failed_notice">未通过:%s</string>
    <string name="recognize_success_notice">通过:%s</string>
    <string name="low_confidence_level">人脸置信度低</string>
    <string name="specific_engine_init_failed">%s 初始化失败，错误码为:%d</string>
    <string name="notice_change_detect_degree">相机已切换，若无法检测到人脸，需要在首页修改视频模式人脸检测角度</string>
    <string name="liveness_detect">活体检测</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_rgb_preview_size">RGB CAMERA\n%dx%d</string>
    <string name="camera_ir_preview_size">IR CAMERA\n%dx%d</string>
    <string name="camera_error_notice">\n可能的原因：该设备不支持同时打开两个摄像头</string>
    <string name="draw_ir_rect_mirror_horizontal">IR人脸框水平镜像绘制</string>
    <string name="draw_ir_rect_mirror_vertical">IR人脸框垂直镜像绘制</string>
    <string name="keep_phone_upright">手机持正更快哦！</string>
    <string name="multi_person_in_screen">请保证相机范围内只有您自己的面部。</string>

    <!--人脸批量注册进度框-->
    <string name="progress_dialog_batch_register">进度: %d / %d</string>
    <string name="progress_dialog_registering_please_wait">注册中，请稍等</string>

    <!--批量注册-->
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="clear_face_text">批量注册将清空人脸库，确认进行吗?</string>
    <string name="batch_process_notification_register">请将注册图片保存在：\n`sdcard/Faces/Register/`\n图片格式：jpg\n命名格式：学号.jpg</string>
    <string name="batch_register_folder_is_empty">注册文件夹为空！\n请放入注册图片！</string>
    <string name="batch_process_no_face_need_to_delete">当前人脸库就是空的哦！</string>
    <string name="batch_process_confirm_delete">确认删除这%d张图片及人脸特征？</string>
    <string name="batch_process_batch_register">批量注册</string>
    <string name="batch_process_notification">提示</string>
    <string name="batch_process_begin_register">开始注册</string>
    <string name="batch_process_clear_faces">清空人脸库</string>
    <string name="batch_face_clear_tip">%d个人脸特征已被删除！</string>
    <string name="batch_process_path_is_not_exists">路径 \n%s\n 不存在</string>
    <string name="batch_process_path_is_not_dir">路径 \n%s\n 不是文件夹</string>
    <string name="batch_process_processing_please_wait">处理中，请稍等。\n</string>
    <string name="batch_process_finished_info">处理完成！\n处理总数 =  %d \n成功数 = %d \n失败数 = %d \n处理失败的图片保存在：\n`%s`</string>

</resources>