<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="45dp"
    android:layout_marginRight="8dp"
    android:gravity="center"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/ime1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="left"
        android:contentDescription="@string/stu_singInTime"
        android:text="@string/stu_singInTime"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/stu_name"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/status"
        android:textColor="#000"
        android:textSize="16sp" />

</LinearLayout>
