<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActiveEngineActivity"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/appIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="80dp"
        android:ems="15"
        android:hint="@string/app_id"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/sdkKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/appIdEditText"
        android:ems="15"
        android:hint="@string/sdk_key"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdkKeyEditText"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="80dp"
        android:layout_centerHorizontal="true"

        android:text="@string/do_active_engine"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/circle_button"

        android:onClick="doActiveEngineButtonClick" />

</RelativeLayout>